--- a/css/index.css
+++ b/css/index.css
@@ -56,6 +56,15 @@
 }
 
 /* 기본 설정 */
+html {
+  width: 100vw;
+  height: fit-content;
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 p {
   margin: 0;
 }
@@ -68,8 +77,6 @@ a {
 }
 
 body {
-  width: 100%;
-  height: 100%;
   background-color: black;
   margin: 0 auto;
   padding: 0;
@@ -321,6 +328,7 @@ header {
   justify-content: end;
   align-items: center;
   margin-bottom: 48px;
+  overflow: hidden;
 }
 
 #pr-chara-fillter {
@@ -728,7 +736,8 @@ header {
 
 /* 희망사항 - 버튼 */
 #desires-button {
-  width: 100%;
+  width: calc(100% - 32px);
+  max-width: 380px;
   height: fit-content;
   margin-block: 40px;
 }
@@ -1043,44 +1052,96 @@ footer {
 }
 
 #side-menu-profilePic {
-  width: 53.15%;
-  aspect-ratio: 1 / 1;
-  border-radius: 100%;
-  background-image: url(../src/img/pro_pic.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+  height: auto;
+  aspect-ratio: 3 / 4;
+  background: url(../src/img/pro_pic_crop.png) no-repeat center/cover;
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
   margin-bottom: 20px;
 }
 
 #side-menu-introduce {
-  width: 76%;
+  width: 100%;
   height: fit-content;
+  margin-top: 25vh;
 }
 
 #side-menu-bt {
+  width: 100%;
+  height: 36px;
   background-color: white;
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 76%;
-  height: 36px;
 }
 
-#side-menu-title {
+.timeline {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  word-break: keep-all;
+}
+
+.timeline-group {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 12fr 10fr;
+  grid-template-rows: auto auto auto;
+  gap: 8px 0;
+  align-items: stretch;
   letter-spacing: -0.25px;
 }
 
-#section-line {
-  height: 18px;
-  width: 30px;
-  border-bottom: 1px solid #fff;
-  margin-bottom: 18px;
+.timeline-dot {
+  font-size: 16px;
+  text-align: center;
+  font-weight: bold;
+  line-height: 40px;
 }
 
-#side-menu-summary {
-  line-height: 165%;
+.timeline-year {
+  font-weight: bold;
+  font-size: 16px;
+  padding: 5px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+}
+
+.timeline-date {
+  font-weight: 200;
+  padding: 5px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.timeline-details {
+  font-weight: 200;
+  padding: 5px;
+}
+
+.timeline-details span {
+  font-weight: 500;
+}
+
+.timeline-empty {
+  width: 100%;
 }
 
 #side-menu-bt {
@@ -1098,6 +1159,7 @@ footer {
 }
 
 .portfolio-category {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
