--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,8 @@
 }
 
 /* 기본 설정 */
-html {
+html,
+body {
   width: 100vw;
   height: fit-content;
   overflow-x: hidden;
@@ -135,10 +136,22 @@ body {
 /* 애니메이션 */
 @keyframes glow {
   0% {
-    filter: drop-shadow(0px 0px 4px #ff005e);
+    filter: drop-shadow(0px 0px 4px #dcff00);
   }
   100% {
-    filter: drop-shadow(0px 0px 10px #ff005e);
+    filter: drop-shadow(0px 0px 10px #dcff00);
+  }
+}
+
+@keyframes scale {
+  0% {
+    scale: 0.9;
+  }
+  100% {
+    scale: 1.1;
+  }
+  0% {
+    scale: 0.9;
   }
 }
 
@@ -341,22 +354,21 @@ header {
 }
 
 #pr-chara-bg {
+  width: 276px;
+  height: 230px;
   position: relative;
-  width: 1104px; /* 출력할 276px의 4배 */
-  height: 920px; /* 출력할 230px의 4배 */
 }
 
 #pr-chara-canvas-wrapper {
   position: relative;
-  width: 1104px; /* 출력할 276px의 4배 */
-  height: 920px; /* 출력할 230px의 4배 */
-  /* script로 scale 변경 예정*/
+  width: 100%; /* 출력할 276px의 4배 */
+  height: 100%; /* 출력할 230px의 4배 */
+  /* script로 scale 변경됨*/
   transform-origin: bottom;
 }
 
 #colorbgcanvas {
   /* aspect-ratio: auto !important; */
-  z-index: -2 !important;
   pointer-events: none !important;
 }
 
@@ -493,13 +505,13 @@ header {
   letter-spacing: 2px;
   font-family: "Pretendard";
   font-weight: 100;
-  font-size: 15px;
+  font-size: 16px;
   margin-top: 60px;
 }
 
 #pr-countdown-notice-sub {
   color: white;
-  font-size: 20px;
+  font-size: 24px;
   margin-top: 12px;
   letter-spacing: 1.5px;
   font-family: "RixYeoljeongdo_Regular";
@@ -507,7 +519,7 @@ header {
 
 #pr-countdown-notice-main {
   color: white;
-  font-size: 48px;
+  font-size: 50px;
   margin-top: 6px;
   letter-spacing: 1.5px;
   font-family: "RixYeoljeongdo_Regular";
@@ -528,7 +540,6 @@ header {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 19px;
-  animation: glow 0.5s infinite alternate ease-in-out;
 }
 
 #pr-countdown-timer-wrapper .num {
@@ -586,9 +597,9 @@ header {
 }
 
 #pr-countdown-button-notice {
-  color: white;
+  color: rgba(255, 255, 255, 0.5);
   font-family: "pretendard";
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 300;
   margin-top: 16px;
 }
@@ -612,10 +623,15 @@ header {
   width: max(226px, 62.7%);
   height: auto;
   margin-block: 80px;
+  scale: 0;
 }
 /* 스킬볼 - 잠시만요 이미지 */
 
 /* 스킬볼 - 강조 말풍선 */
+#skillball-bubble-wrapper {
+  position: relative;
+  width: 100%;
+}
 
 #skillball-bubble {
   width: 100%;
@@ -723,15 +739,17 @@ header {
 #skillball-explain {
   color: rgba(255, 255, 255, 0.5);
   font-size: 13px;
+  font-weight: 300;
   margin-bottom: 16px;
 }
 
 #skillball-ballbox {
   width: 100%;
-  height: 62.5vh;
+  height: min(110vw, 560px);
   border: none;
   overflow: hidden;
   margin-bottom: 40px;
+  opacity: 0;
 }
 
 /* 희망사항 - 버튼 */
@@ -751,9 +769,9 @@ header {
 
 .button-notice {
   font-family: "pretendard";
-  font-size: 12px;
-  font-weight: 400;
-  margin-top: 6px;
+  font-size: 13px;
+  font-weight: 300;
+  margin-top: 10px;
 }
 
 .button-wrapper:not(:first-child) {
@@ -1158,6 +1176,11 @@ footer {
   align-items: center;
 }
 
+#portfolio-category-wrapper {
+  width: 100%;
+  height: auto;
+}
+
 .portfolio-category {
   width: 100%;
   display: flex;
@@ -1347,10 +1370,10 @@ footer {
 .slider-container {
   width: 85%;
   height: fit-content;
-  max-width: 480px; /* 모바일 뷰라면 적당한 값으로 */
+  max-width: 480px;
   margin: 0 auto;
   padding-bottom: 1px;
-  background: #eee;
+  background: transparent;
 }
 .slick-slide {
   text-align: center;
