--- a/css/index.css
+++ b/css/index.css
@@ -397,6 +397,7 @@ header {
   display: flex;
   justify-content: center;
   z-index: 1;
+  opacity: 0;
 }
 
 #pr-chara-img-wrapper > img {
@@ -488,6 +489,7 @@ header {
   z-index: 2;
   bottom: 0;
   width: 100%;
+  transform: scale(0);
 }
 
 #pr-chara-bubble-text {
@@ -981,11 +983,6 @@ footer {
   position: absolute;
   top: -22px;
   left: 16px;
-}
-
-#footer-bookmark #Contact-2 {
-  margin: 0 auto;
-  display: block;
 }
 
 #footer-chara {
